<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/colorLinearLayout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="colorpalette.android.tb.pl.colorpalette.ColorActivity">


    <TextView
        android:id="@+id/redLabel"
        android:text="@string/red"
        style="@style/LabelStyle" />

    <SeekBar
        android:id="@+id/redSeekBar"
        style="@style/ColorSeekbarStyle" />

    <TextView
        android:id="@+id/greenLabel"
        android:text="@string/green"
        style="@style/LabelStyle" />

    <SeekBar
        android:id="@+id/greenSeekBar"
        style="@style/ColorSeekbarStyle" />

    <TextView
        android:id="@+id/blueLabel"
        android:text="@string/blue"
        style="@style/LabelStyle" />

    <SeekBar
        android:id="@+id/blueSeekBar"
        style="@style/ColorSeekbarStyle" />

    <Button
        android:id="@+id/generateButton"
        android:text="@string/generate"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="64dp" />

    <Button
        android:id="@+id/saveButton"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="64dp" />
</LinearLayout>
